--- a/.env.template
+++ b/.env.template
@@ -7,5 +7,8 @@ MASTER_IMAGE_NAME=
 # [optional] Container name of the master
 MASTER_CONTAINER_NAME=
 
-# [optional] A port on which Flask app will be bound to localhost
+# [optional] A host on which Flask app will run
+MASTER_FLASK_HOST=
+
+# [optional] A port on which Flask app will run
 MASTER_FLASK_PORT=
